--- a/activity_recognition.ipynb
+++ b/activity_recognition.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "activity_recognition_ZahraDehghani.ipynb",
+      "name": "activity_recognition.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ZahraDehghani99/Activity_Recognition/blob/master/activity_recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -48,12 +59,12 @@
       "metadata": {
         "id": "QfW7kWvQFCiN"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -108,7 +119,7 @@
       "metadata": {
         "id": "-3VtJfA8s9Zw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +136,7 @@
         "id": "zPpz1yP4tHze",
         "outputId": "99fdc187-aa43-48a1-820e-d30ed9c2b680"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +174,7 @@
         "id": "b7S2KWHcDOQR",
         "outputId": "90675721-3adc-4e1e-c1cd-180e75f0852c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +814,7 @@
         "id": "Pj1ejYgUOT5S",
         "outputId": "e6a71330-92da-4e68-f9ef-2b17658e9f16"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2349,7 +2360,7 @@
       "cell_type": "code",
       "source": [
         "import seaborn as sns\n",
-        "def confusion_matrix(y_test, predicted):\n",
+        "def confusion_matrix(y_test, y_pred):\n",
         "    df_cm = pd.DataFrame(metrics.confusion_matrix(y_test, y_pred), index = [1,2,3,4],\n",
         "                  columns = [1,2,3,4])\n",
         "    sns.heatmap(df_cm, annot=True, cmap=\"YlGnBu\" ,fmt='g')\n",
