--- a/activity_recognition.ipynb
+++ b/activity_recognition.ipynb
@@ -6,6 +6,7 @@
       "name": "activity_recognition.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2291,8 +2292,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'decistion tree accuracy on train set: {dt.score(X_train, y_train)}')\n",
-        "print(f'decistion tree accuracy on test set : {dt.score(X_test, y_test)}')"
+        "print(f'decision tree accuracy on train set: {dt.score(X_train, y_train)}')\n",
+        "print(f'decision tree accuracy on test set : {dt.score(X_test, y_test)}')"
       ],
       "metadata": {
         "colab": {
@@ -2921,8 +2922,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'random forest accuracy on train set: {xgb.score(X_train, y_train)}')\n",
-        "print(f'random forest accuracy on test set : {xgb.score(X_test, y_test)}')"
+        "print(f'xgb accuracy on train set: {xgb.score(X_train, y_train)}')\n",
+        "print(f'xgb accuracy on test set : {xgb.score(X_test, y_test)}')"
       ],
       "metadata": {
         "colab": {
@@ -3116,8 +3117,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'random forest accuracy on train set: {svc.score(X_train, y_train)}')\n",
-        "print(f'random forest accuracy on test set : {svc.score(X_test, y_test)}')"
+        "print(f'svm accuracy on train set: {svc.score(X_train, y_train)}')\n",
+        "print(f'svm accuracy on test set : {svc.score(X_test, y_test)}')"
       ],
       "metadata": {
         "colab": {
