--- a/activity_recognition.ipynb
+++ b/activity_recognition.ipynb
@@ -60,18 +60,18 @@
       "metadata": {
         "id": "QfW7kWvQFCiN"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DdXhbO3ADBnP",
-        "outputId": "35820331-25b3-4fb6-dd95-21e6ac877381"
+        "outputId": "6638497f-8023-4a02-d629-57df8d15929b"
       },
       "outputs": [
         {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "-3VtJfA8s9Zw"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -135,9 +135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zPpz1yP4tHze",
-        "outputId": "99fdc187-aa43-48a1-820e-d30ed9c2b680"
+        "outputId": "053dfe05-510d-45b9-d61c-75788695728e"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,16 +173,16 @@
           "height": 369
         },
         "id": "b7S2KWHcDOQR",
-        "outputId": "90675721-3adc-4e1e-c1cd-180e75f0852c"
+        "outputId": "11bba678-a801-4c48-e53d-0a323e285e36"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-34c391bb-97f4-4ebf-a52a-411ab614d12b\">\n",
+              "  <div id=\"df-b43a2ca8-7551-4395-b91d-1ab506025b06\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -710,7 +710,7 @@
               "</table>\n",
               "<p>5 rows × 535 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34c391bb-97f4-4ebf-a52a-411ab614d12b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b43a2ca8-7551-4395-b91d-1ab506025b06')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -761,12 +761,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-34c391bb-97f4-4ebf-a52a-411ab614d12b button.colab-df-convert');\n",
+              "          document.querySelector('#df-b43a2ca8-7551-4395-b91d-1ab506025b06 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-34c391bb-97f4-4ebf-a52a-411ab614d12b');\n",
+              "          const element = document.querySelector('#df-b43a2ca8-7551-4395-b91d-1ab506025b06');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -813,9 +813,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pj1ejYgUOT5S",
-        "outputId": "e6a71330-92da-4e68-f9ef-2b17658e9f16"
+        "outputId": "de6106e2-908a-43b6-ab6f-32454999daa2"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1784,9 +1784,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aOIPoM8Zhpr5",
-        "outputId": "3fea6c9a-6ebd-46db-f2df-fb42c8cd3da6"
+        "outputId": "506bda4e-a418-4e07-9b52-d4b4786627d0"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,9 +1823,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6d69fed9-77c2-452f-850c-f3c255cca890"
+        "outputId": "fb16b4e1-8bd9-4d0e-933c-8612645e30bf"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1943,9 +1943,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8KaHkP6BrK_8",
-        "outputId": "8ec05f10-786d-43a6-edaf-06b0bf84ef96"
+        "outputId": "2dcd811e-262a-4f6f-b22a-76063ec0aef0"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1979,7 +1979,7 @@
       "metadata": {
         "id": "J4EfjFoXo9-J"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -2222,7 +2222,7 @@
       "metadata": {
         "id": "GRZNAzvCUtA2"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -2235,9 +2235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBDvUSr1aEDc",
-        "outputId": "76d2e824-7c81-4cef-c1f6-768ff9725d1e"
+        "outputId": "e4b9164d-7c02-4f30-c13c-0ee05b8dd72c"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -2300,16 +2300,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h_eluhIidaUj",
-        "outputId": "318fb85d-f3a1-45b3-945b-d03f6661c062"
+        "outputId": "6511767a-b639-49c6-b198-e28bb7445ad9"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "decistion tree accuracy on train set: 1.0\n",
-            "decistion tree accuracy on test set : 0.9486607142857143\n"
+            "decision tree accuracy on train set: 1.0\n",
+            "decision tree accuracy on test set : 0.9486607142857143\n"
           ]
         }
       ]
@@ -2325,9 +2325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h9SbcIY5a60f",
-        "outputId": "c88d7809-3e85-406c-e2f8-4013004e26ed"
+        "outputId": "dcff4b2e-47a0-43b6-c7ab-adad599e2b88"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -2893,7 +2893,7 @@
       "metadata": {
         "id": "nalMddavu9u_"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -2906,9 +2906,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-RW-SJ-NvHHG",
-        "outputId": "5a54b90c-4420-4bce-fdab-87e0fadb6435"
+        "outputId": "044e59b9-b84a-457f-9e0a-61f09fc17844"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -2930,16 +2930,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nxM7jZ_BvJ4N",
-        "outputId": "77c83a8b-5876-48f8-98bb-de42e79a8630"
+        "outputId": "5aa2ad53-c114-40c0-acc3-99a717039ac2"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "random forest accuracy on train set: 1.0\n",
-            "random forest accuracy on test set : 0.9866071428571429\n"
+            "xgb accuracy on train set: 1.0\n",
+            "xgb accuracy on test set : 0.9866071428571429\n"
           ]
         }
       ]
@@ -3088,7 +3088,7 @@
       "metadata": {
         "id": "-p-VcYijdI8B"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -3125,16 +3125,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WwlZWgx-d7Pp",
-        "outputId": "d24997a0-9b01-48cf-8ab5-4db1d0998bab"
+        "outputId": "acc73ffb-9213-4507-fab2-720f7a107b7c"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "random forest accuracy on train set: 0.9174107142857143\n",
-            "random forest accuracy on test set : 0.875\n"
+            "svm accuracy on train set: 0.9174107142857143\n",
+            "svm accuracy on test set : 0.875\n"
           ]
         }
       ]
